# memento

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  Phase0-COMPLETE.md  README.md  config.json  memory  package.json  pyproject.toml  setup.sh
extensions/: memory-compaction-capture.ts  memory-tools.ts
memory_cli/: __main__.py  cli.py  constants.py
memory_cli/adapters/: __init__.py  base.py  file.py  graph.py  mcp_bridge_shim.py  search.py
memory_cli/commands/: consolidate.py  doctor.py  forget.py  inbox.py  index.py  ingest.py  parse.py  recall.py  status.py  sync.py
memory_cli/core/: __init__.py  atomic.py  config.py  dedup.py  hybrid.py  locking.py  parser.py  search_index.py
scripts/: bootstrap-tiers.sh  consolidate-session.sh  extract-hermes.py
tests/: test_alias.py  test_atomic.py  test_consolidate.py  test_dedup.py  test_file_adapter.py  test_hybrid.py  test_parser.py  test_search_index.py
tests/fixtures/: malformed-graph.jsonl  memories.md
